manifests/argocd-network/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sangtd.duckdns.org`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: https-redirect
          namespace: argocd
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sangtd.duckdns.org`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          serversTransport: skip-tls-verify
  tls:
    certResolver: myresolver
